Fix - issue with token ghost when streaming having pointer events making things behind it unclickable

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -8815,7 +8815,10 @@ body.preventSelectDefinitelyNot .token.declutterToken[style*='opacity: 0.5']{
 .reduceMovement [data-animation] .islight:after{
     animation: none !important;
 }
-
+[data-clone-id],
+[data-clone-id] * {
+    pointer-events: none !important;
+}
 div.note[id^="ui-id"] {
     width: 100% !important;
     padding: 0px !important;
@@ -8823,7 +8826,7 @@ div.note[id^="ui-id"] {
     position: relative;
     overflow: scroll;
 }
-div.note[id^="ui-id"] {
+div.note[id^="ui-id"] { 
     height: 100% !important;
 }
 .tooltip-body-description-text.note-text img{
